--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,24 @@
     android:layout_centerInParent="true"
     android:visibility="gone"/>
 
-<GridView
-    android:id="@+id/gridview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnWidth="90dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-    >
-</GridView>
+<!--<GridView-->
+<!--    android:id="@+id/gridview"-->
+<!--    android:layout_width="fill_parent"-->
+<!--    android:layout_height="fill_parent"-->
+<!--    android:columnWidth="90dp"-->
+<!--    android:numColumns="auto_fit"-->
+<!--    android:verticalSpacing="10dp"-->
+<!--    android:horizontalSpacing="10dp"-->
+<!--    android:stretchMode="columnWidth"-->
+<!--    android:gravity="center"-->
+<!--    >-->
+<!--</GridView>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        />
 
 </RelativeLayout>
